--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="outer-cross">
                       <div class="inner-cross">
                         <div class="cross-base">
-                          <image src="./assets/cross.svg" class="cross"></image>
+                          <image src="./assets/icons/cross.svg" class="cross"></image>
                         </div>
                       </div>
                     </div>
@@ -44,7 +44,7 @@
                     <div class="outer-cross">
                       <div class="inner-cross">
                         <div class="cross-base">
-                          <image src="./assets/cross.svg" class="cross"></image>
+                          <image src="./assets/icons/cross.svg" class="cross"></image>
                         </div>
                       </div>
                     </div>
@@ -71,7 +71,7 @@
                   <div class="outer-cross">
                     <div class="inner-cross">
                       <div class="cross-base">
-                        <image src="./assets/cross.svg" class="cross"></image>
+                        <image src="./assets/icons/cross.svg" class="cross"></image>
                       </div>
                     </div>
                   </div>
@@ -82,22 +82,22 @@
               <td>
                 <div class="contacts-list">
                   <div class="list-item">
-                    <image src="./assets/gmail-pixel.svg" class="contacts-bullet"></image>
+                    <image src="./assets/icons/gmail-pixel.svg" class="contacts-bullet"></image>
                     <a>Email:</a>
                     <a href = "mailto:pik.paval@gmail.com">pik.paval@gmail.com</a>
                   </div>
                   <div class="list-item">
-                    <image src="./assets/telegram-pixel.svg" class="contacts-bullet"></image>
+                    <image src="./assets/icons/telegram-pixel.svg" class="contacts-bullet"></image>
                     <a>Telegram:</a>
                     <a href = "https://t.me/the_mAyty">the_mAyty</a>
                   </div>
                   <div class="list-item">
-                    <image src="./assets/facebook-pixel.svg" class="contacts-bullet"></image>
+                    <image src="./assets/icons/facebook-pixel.svg" class="contacts-bullet"></image>
                     <a>Facebook:</a>
                     <a href = "https://www.facebook.com/pik.paval">pik.paval</a>
                   </div>
                   <div class="list-item">
-                    <image src="./assets/linkedin.svg" class="contacts-bullet"></image>
+                    <image src="./assets/icons/linkedin.svg" class="contacts-bullet"></image>
                     <a>LinkedIn:</a>
                     <a href = "https://www.linkedin.com/in/pavel-pikirenia/">Pavel Pikirenia</a>
                   </div>
@@ -115,7 +115,7 @@
       <div class="doc-bar">
         <div class="doc-app-container">
           <div class="doc-app">
-            <image src="./assets/start.svg" class="app-icon"></image>
+            <image src="./assets/icons/start.svg" class="app-icon"></image>
             <a class="window-name">Start</a>
           </div>
         </div>
