--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <tr>
                 <td>
                   <div class="window-header">
-                    <a class="window-name">Intruduction</a>
+                    <a class="window-name">Introduction</a>
                     <div class="outer-cross">
                       <div class="inner-cross">
                         <div class="cross-base">
@@ -114,9 +114,21 @@
     <div class="footer">
       <div class="doc-bar">
         <div class="doc-app-container">
-          <div class="doc-app">
+          <div class="start-app">
             <image src="./assets/icons/start.svg" class="app-icon"></image>
             <a class="window-name">Start</a>
+          </div>
+          <div class="doc-app">
+            <image src="./assets/icons/image.svg" class="app-icon"></image>
+            <a class="window-name">Photo.jpg</a>
+          </div>
+          <div class="doc-app">
+            <image src="./assets/icons/text.svg" class="app-icon"></image>
+            <a class="window-name">Introduction</a>
+          </div>
+          <div class="doc-app">
+            <image src="./assets/icons/text.svg" class="app-icon"></image>
+            <a class="window-name">Contacts</a>
           </div>
         </div>
       </div>
