add icons, location, fix introduction

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
               <tr>
                 <td>
                   <div class="window-header">
-                    <a class="window-name">Photo.jpg</a>
+                    <div class="window-header">
+                      <image src="./assets/icons/image.svg" class="window-icon"></image>
+                      <div class="window-name">Photo.jpg</div>
+                    </div>
                     <div class="outer-cross">
                       <div class="inner-cross">
                         <div class="cross-base">
@@ -40,7 +43,10 @@
               <tr>
                 <td>
                   <div class="window-header">
-                    <a class="window-name">Introduction</a>
+                    <div class="window-header">
+                      <image src="./assets/icons/text.svg" class="window-icon"></image>
+                      <div class="window-name">Introduction</div>
+                    </div>
                     <div class="outer-cross">
                       <div class="inner-cross">
                         <div class="cross-base">
@@ -53,8 +59,10 @@
               </tr>
               <tr>
                 <td class="introduction-body">
+                  <div class="introduction-centered">
                     <h1>Pavel Pikirenia</h1>
                     <p>Backend Web Developer</p>
+                  </div>
                 </td>
               </tr>
             </table>
@@ -67,7 +75,10 @@
             <tr>
               <td>
                 <div class="window-header">
-                  <a class="window-name">Contacts</a>
+                  <div class="window-header">
+                    <image src="./assets/icons/text.svg" class="window-icon"></image>
+                    <div class="window-name">Contacts</div>
+                  </div>
                   <div class="outer-cross">
                     <div class="inner-cross">
                       <div class="cross-base">
@@ -100,6 +111,10 @@
                     <image src="./assets/icons/linkedin.svg" class="contacts-bullet"></image>
                     <a>LinkedIn:</a>
                     <a href = "https://www.linkedin.com/in/pavel-pikirenia/">Pavel Pikirenia</a>
+                  </div>
+                  <div class="list-item">
+                    <image src="./assets/icons/globe.svg" class="contacts-bullet"></image>
+                    <a>Vilnius, Lithuania</a>
                   </div>
                 </div>
               </td>
