--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="./css/header.css">
       <link rel="stylesheet" href="./css/footer.css">
       <link rel="stylesheet" href="./css/main.css">
+      <link rel="icon" href="./assets/icons/favicon.svg" type="image/svg+xml" sizes="any">
    </head>
 
   <body>
@@ -93,39 +94,30 @@
             <tr>
               <td>
                 <div class="text-window">
-                  <div class="contacts-list">
+                  <div class="list">
                     <div class="list-item">
                       <image src="./assets/icons/gmail-pixel.svg" class="contacts-bullet"></image>
-                      &nbsp;
-                      <a>Email:</a>
-                      &nbsp;
+                      &nbsp;Email:&nbsp;
                       <a href = "mailto:pik.paval@gmail.com">pik.paval@gmail.com</a>
                     </div>
                     <div class="list-item">
                       <image src="./assets/icons/telegram-pixel.svg" class="contacts-bullet"></image>
-                      &nbsp;
-                      <a>Telegram:</a>
-                      &nbsp;
+                      &nbsp;Telegram:&nbsp;
                       <a href = "https://t.me/the_mAyty">the_mAyty</a>
                     </div>
                     <div class="list-item">
                       <image src="./assets/icons/facebook-pixel.svg" class="contacts-bullet"></image>
-                      &nbsp;
-                      <a>Facebook:</a>
-                      &nbsp;
+                      &nbsp;Facebook:&nbsp;
                       <a href = "https://www.facebook.com/pik.paval">pik.paval</a>
                     </div>
                     <div class="list-item">
                       <image src="./assets/icons/linkedin.svg" class="contacts-bullet"></image>
-                      &nbsp;
-                      <a>LinkedIn:</a>
-                      &nbsp;
-                      <a href = "https://www.linkedin.com/in/pavel-pikirenia/">Pavel&nbsp;Pikirenia</a>
+                      &nbsp;LinkedIn:&nbsp;
+                      <a href = "https://www.linkedin.com/in/pavel-pikirenia/">Pavel Pikirenia</a>
                     </div>
                     <div class="list-item">
                       <image src="./assets/icons/globe.svg" class="contacts-bullet"></image>
-                      &nbsp;
-                      <a>Vilnius,&nbsp;Lithuania</a>
+                      &nbsp;Vilnius, Lithuania
                     </div>
                   </div>
                 </div>
@@ -155,9 +147,40 @@
           <tr>
             <td>
               <div class="text-window">
-                <div class="experience">
-                  <a>> Wargaming</a>
-                  <a> > 2021 - now</a>
+                <div class="list">
+                  <div class="list-item">
+                    <image src="./assets/icons/minus.svg" class="contacts-bullet"></image>
+                    <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                    <image src="./assets/icons/wargaming.svg" class="contacts-bullet"></image>
+                    &nbsp;Wargaming
+                  </div>
+                  <div class="list-item2">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/calendar.svg" class="contacts-bullet"></image>
+                      &nbsp;Feb 2021 - now
+                    </div>
+                  </div>
+                  <div class="list-item2">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/computer.svg" class="contacts-bullet"></image>
+                      &nbsp;Backend Web Developer
+                    </div>
+                  </div>
+                  <div class="list-item2">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-root">
+                      <image src="./assets/icons/minus.svg" class="contacts-bullet"></image>
+                      <div class="list-item-nested-root">
+                        <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                        <image src="./assets/icons/computer.svg" class="contacts-bullet"></image>
+                        &nbsp;Technologies
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </td>
@@ -188,6 +211,7 @@
             <image src="./assets/icons/text.svg" class="app-icon"></image>
             <a class="window-name">Experience</a>
           </div>
+        </div>
       </div>
     </div>
   </body>
