--- a/index.html
+++ b/index.html
@@ -176,9 +176,73 @@
                       <image src="./assets/icons/minus.svg" class="contacts-bullet"></image>
                       <div class="list-item-nested-root">
                         <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
-                        <image src="./assets/icons/computer.svg" class="contacts-bullet"></image>
+                        <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
                         &nbsp;Technologies
                       </div>
+                    </div>
+                  </div>
+                  <div class="list-item3">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
+                      &nbsp;Python3
+                    </div>
+                  </div>
+                  <div class="list-item3">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
+                      &nbsp;SQL (PostgreSQL)
+                    </div>
+                  </div>
+                  <div class="list-item3">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
+                      &nbsp;Redis
+                    </div>
+                  </div>
+                  <div class="list-item3">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
+                      &nbsp;Kafka
+                    </div>
+                  </div>
+                  <div class="list-item3">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
+                      &nbsp;RabbitMQ
+                    </div>
+                  </div>
+                  <div class="list-item3">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
+                      &nbsp;Celery
+                    </div>
+                  </div>
+                  <div class="list-item3">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
+                      &nbsp;Git
+                    </div>
+                  </div>
+                  <div class="list-item3">
+                    <image src="./assets/icons/long-dashes.svg" class="vertical-dash"></image>
+                    <div class="list-item-nested">
+                      <image src="./assets/icons/dashes.svg" class="inline-dash"></image>
+                      <image src="./assets/icons/chip.svg" class="contacts-bullet"></image>
+                      &nbsp;Nginx
                     </div>
                   </div>
                 </div>
@@ -193,23 +257,23 @@
         <div class="doc-app-container">
           <div class="start-app">
             <image src="./assets/icons/start.svg" class="windows-icon"></image>
-            <a class="window-name">Start</a>
+            <a class="doc-name">Start</a>
           </div>
           <div class="doc-app">
             <image src="./assets/icons/image.svg" class="app-icon"></image>
-            <a class="window-name">Photo.jpg</a>
+            <a class="doc-name">Photo.jpg</a>
           </div>
           <div class="doc-app">
             <image src="./assets/icons/text.svg" class="app-icon"></image>
-            <a class="window-name">Introduction</a>
+            <a class="doc-name">Introduction</a>
           </div>
           <div class="doc-app">
             <image src="./assets/icons/text.svg" class="app-icon"></image>
-            <a class="window-name">Contacts</a>
+            <a class="doc-name">Contacts</a>
           </div>
           <div class="doc-app">
             <image src="./assets/icons/text.svg" class="app-icon"></image>
-            <a class="window-name">Experience</a>
+            <a class="doc-name">Experience</a>
           </div>
         </div>
       </div>
